Clean CropMapper type handling